--- a/neovim/coc-settings.json
+++ b/neovim/coc-settings.json
@@ -1,5 +1,6 @@
 {
-  "suggest.noselect": false,
+  "suggest.noselect": true,
+  "python.jediEnabled": false,
   "suggest.preferCompleteThanJumpPlaceholder": true,
   "go.goplsPath": "~/go/bin/gopls",
   "languageserver": {
