docker-sync 対応。および coc のインストールエラーを修正し、動作が重いのを直した

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,10 @@
 version: "3.7"
 services:
   ubuntu-neovim-dein:
-    image: virtualion/ubuntu-neovim-dein
+    image: virtualion/ubuntu-neovim-dein:rbenv
     build:
       context: ./
     volumes:
-      - "~/kowaprojects/swatch_erp:/kowa-swatch"
       - "~/Documents/kowa-projects/kowa_corduranyco_master:/kowa_corduranyco"
       - "./:/srv"
       - "~/.git:/root/.git"
