--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   ubuntu-neovim-dein:
-    image: virtualion/ubuntu-neovim-dein:rbenv
+    image: virtualion/ubuntu-neovim-dein:latest
     build:
       context: ./
     volumes:
