--- a/docker-compose.override.gcp.yml
+++ b/docker-compose.override.gcp.yml
@@ -3,3 +3,4 @@ services:
   ubuntu-neovim-dein:
     volumes:
       - /home/takabatakekoichi/development/swatch_erp:/kowa-swatch:delegated
+      - "~/development/react-native-practice:/react-native-practice:delegated"
